<resources>
    <!-- General strings -->
    <string name="uselessContent">Decoration item</string>
    <string name="cancel_button_text">Cancelar</string>
    <string name="ok_button_text">Aceptar</string>
    <string name="delete_dialog_title">Ojito con esto</string>
    <string name="delete_dialog_message">Vas a borrar %1$s.¿Estás seguro?</string>
    <string name="delete_button_text">Borrar</string>
    <string name="undo_max">Ya no hay más que deshacer, tu acción se ha perdido en el tiempo y el espacio</string>
    <string name="default_user_initial">\?</string>
    <string name="default_user_name">Default</string>
    <!-- Mail -->
    <string name="mail_sent">Ha ocurrido un error. Que no cunda el pánico, Pablito está al tanto del error</string>
    <string name="mail_fail">Ha ocurrido un error, pero no se ha enviado. Cuéntaselo tú a Pablito</string>
    <string name="mail_default_subject">Error en []</string>
    <string name="mail_default_body">Ups… algo le ha salido mal a {}. Ha ocurrido un error en la línea [] de ()</string>
    <string name="mail_empty_trace">La traza estaba vacía</string>
    <string name="mail_trace_not_found">No había traza tras la del propio email</string>
    <string name="saveError">Ups… algo le ha salido mal a %1$s %2$s</string>
    <!-- Firebase -->
    <string name="firebase_not_subscribed">Firebase ha fallado, dicho de otra manera, no se están recibiendo los cambios que el resto de la tribu está haciendo a la lista %1$s</string>
    <string name="firebase_installation_id">No se puede obtener el id de instalación de Firebase, con lo cual el servidor no sabrás que eres tú el que está haciendo cosas</string>
    <!-- Tab names -->
    <string name="app_name">ListaDLC</string>
    <string name="tab_text_1">Principal</string>
    <string name="tab_text_2">Otros</string>
    <string name="tab_text_3">Comidas</string>
    <!-- Settings literals -->
    <string name="settings_text_title">Opciones</string>
    <string name="settings_text_user">¿Quién eres?</string>
    <string name="settings_text_user_not_defined">No sé quién soy</string>
    <string name="settings_buy_mode_subtext">Con el modo he salido a comprar activado, recibirás una notificación cada vez que se modifique algo en la lista de la compra</string>
    <string name="settings_buy_mode_text">Modo he salido a comprar</string>
    <string name="settings_user_subtext">Sabiendo quién eres, el resto de la tribu sabrá quién ha hecho cambios. Además, no recibirás tus propias notificaciones</string>
    <string name="settings_user_text">¿Quién eres?</string>
    <string name="settings_identificator_text">Ver el id de instalación</string>
    <string name="settings_text_suggestion">Pide por esa boquita</string>
    <string name="settings_placeholder_suggestion">Pablito tomará nota. Expláyate si quieres</string>
    <!-- Settings keys -->
    <string name="settings_buy_mode">settings_buy_mode</string>
    <string name="settings_user">settings_user</string>
    <string name="settings_installation_id">settings_installationId</string>
    <string name="settings_suggestion">settings_suggestion</string>
    <!-- FAB -->
    <string name="FAB_description">Añadir producto</string>
    <string name="FABtop_description">Volver arriba</string>
    <!-- Save product literals -->
    <string name="save_add">Añadir</string>
    <string name="save_edit">Editar</string>
    <string name="save_name_hint">¿Qué es?</string>
    <string name="save_quantity_hint">¿Cuántos?</string>
    <string name="save_comments_hint">Pero que sea…</string>
    <string name="save_photo_literal">A lo mejor hace falta una foto para entenderlo…</string>
    <string name="save_save_button">Guardar</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="list_fragment_label">List Fragment</string>
    <string name="validationErrorName">¿Y el nombre?</string>
    <string name="saveOk">Se ha guardado</string>
    <string name="cancel">Cancelar</string>
    <!-- Main List -->
    <string name="getProductsError">Ups… algo ha salido mal al obtener la lista</string>
    <string name="choose_quantity_message">¿Cuántos van a ser?</string>
    <!-- Search Menu -->
    <string name="search_menu_placeholder">¿Qué estás buscando?</string>
    <string name="search_menu_noresults">Aquí no hay nada de eso. Siga buscando</string>
    <!-- Meals -->
    <string name="meal_lunch_name">Almuerzos</string>
    <string name="meal_dinner_name">Cenas</string>
    <string name="meal_lunch_name_checked">Posibles Almuerzos</string>
    <string name="meal_dinner_name_checked">Posibles Cenas</string>
    <string name="meal_name_checked">Posibles Comidas</string>
    <string name="meal_dialog_parent">¿A qué lista pertenece esto?</string>
    <string name="meal_dialog_ingredients">¿Qué lleva?</string>
    <string name="meal_dialog_name">¿Y cómo se llama?</string>
    <string name="meal_dialog_name_placeholder">Ponle un nombre bonito</string>
    <string name="meal_dialog_title_new">La nueva comida</string>
    <string name="meal_dialog_title_edit">Hay que cambiar %1$s</string>
    <string name="title_activity_meal_ingredients">MealIngredientsActivity</string>
    <string name="meal_add_title">Qué hace falta para hacer %1$s</string>
    <string name="meal_no_meal_received">No se ha recibido ninguna comida</string>
    <string name="meals_no_ingredient_received">No se ha recibido ningún ingrediente</string>
    <string name="meals_not_yet_created">Crea primero la comida, y luego elige los ingredientes</string>
    <!-- Others -->
    <string name="others_buyed_literal">comprados</string>
    <string name="others_new_parent_option">A ninguna, es un tipo nuevo</string>
    <string name="others_dialog_title_new">La nueva cosa</string>
    <string name="others_dialog_title_edit">Hay que cambiar %1$s</string>
    <!-- Historic -->
    <string name="historic_title">Historial</string>
    <string name="historic_user_filter">Muestra lo que hizo…</string>
    <string name="historic_date_filter">Pero solo…</string>
    <string name="historic_header_user">¿Quién?</string>
    <string name="historic_header_item">¿Qué?</string>
    <string name="historic_header_date">¿Cuándo?</string>
    <string name="historic_filter_all">Todos</string>
    <string name="historic_filter_today">Hoy</string>
    <string name="historic_filter_yesterday">Ayer</string>
    <string name="historic_filter_week">Esta semana</string>
    <string name="historic_filter_month">Este mes</string>
    <string name="historic_modal_title">Qué ocurrió con %1$s</string>
    <string name="historic_notification_sent">Ya se envió la notificación</string>
    <string name="historic_notification_not_sent">El resto de La Tribu aún no se ha enterado de esto</string>
    <string name="historic_ip_sender">Se ha hecho desde %1$s</string>
    <string name="historic_original_data">Antes era %1$s</string>
</resources>