<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_text_title">

        <SwitchPreference
            android:key="@string/settings_buy_mode"
            android:title="@string/settings_buy_mode_text"
            android:summary="@string/settings_buy_mode_subtext" />

        <ListPreference
            android:key="@string/settings_user"
            android:title="@string/settings_user_text" />

        <EditTextPreference
            android:key="@string/settings_suggestion"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:title="@string/settings_text_suggestion"
            app:enableCopying="true"
            app:enabled="true"
            app:negativeButtonText="@string/cancel_button_text"
            app:persistent="false"
            app:positiveButtonText="@string/ok_button_text"
            app:selectable="true"
            app:summary="@string/settings_placeholder_suggestion" />

        <PreferenceCategory android:title="Id de instalación">

            <EditTextPreference
                android:defaultValue="Default value"
                android:key="@string/settings_installation_id"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="Id de instalación"
                app:enableCopying="true"
                app:enabled="true"
                app:negativeButtonText="@string/cancel_button_text"
                app:persistent="true"
                app:positiveButtonText="@string/ok_button_text"
                app:selectable="true" />
        </PreferenceCategory>

    </PreferenceCategory>
</androidx.preference.PreferenceScreen>