<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="start"
        android:background="?colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:theme="?attr/actionBarTheme">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/settingsButton"
                android:layout_width="48dp"
                android:layout_height="0dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/uselessContent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/twotone_hamburguer_24" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/settingsButton"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/buy_mode"
                android:layout_width="48dp"
                android:layout_height="0dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/uselessContent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/app_name"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/twotone_buymode_on_24" />

            <ImageButton
                android:id="@+id/undo"
                android:layout_width="48dp"
                android:layout_height="0dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/uselessContent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/historic"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/twotone_reply_24" />

            <ImageButton
                android:id="@+id/historic"
                android:layout_width="48dp"
                android:layout_height="0dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/uselessContent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/user"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/twotone_history_24" />

            <Button
                android:id="@+id/user"
                android:layout_width="48dp"
                android:layout_height="0dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="#07000000"
                android:drawableTint="#07000000"
                android:text="@string/default_user_initial"
                android:textColor="@color/grey"
                android:textSize="24sp"
                app:cornerRadius="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

</LinearLayout>